--- a/package.json
+++ b/package.json
@@ -21,11 +21,16 @@
   },
   "scripts": {
     "prepare": "tsc",
-    "test": "jest"
+    "test": "jest",
+    "test:watch": "yarn --silent test --watch"
   },
   "dependencies": {
+    "@types/node": "^12.0.10",
+    "class-transformer": "^0.2.3",
     "graphviz": "^0.0.9",
     "js-yaml": "^3.13.1",
+    "ow": "^0.13.2",
+    "reflect-metadata": "^0.1.13",
     "topological-sort": "^0.3.0"
   },
   "husky": {
