--- a/package.json
+++ b/package.json
@@ -1,41 +1,43 @@
 {
-  "name": "buildkite-graph",
-  "version": "1.0.0",
-  "main": "dist/index.js",
-  "license": "MIT",
-  "private": false,
-  "files": [
-    "dist"
-  ],
-  "devDependencies": {
-    "@types/graphviz": "^0.0.30",
-    "@types/jest": "^24.0.15",
-    "@types/js-yaml": "^3.12.1",
-    "husky": "^2.5.0",
-    "jest": "^24.8.0",
-    "prettier": "^1.18.2",
-    "pretty-quick": "^1.11.1",
-    "ts-jest": "^24.0.2",
-    "ts-node": "^8.3.0",
-    "typescript": "^3.5.2"
-  },
-  "scripts": {
-    "prepare": "tsc",
-    "test": "jest",
-    "test:watch": "yarn --silent test --watch"
-  },
-  "dependencies": {
-    "@types/node": "^12.0.10",
-    "class-transformer": "^0.2.3",
-    "graphviz": "^0.0.9",
-    "js-yaml": "^3.13.1",
-    "ow": "^0.13.2",
-    "reflect-metadata": "^0.1.13",
-    "topological-sort": "^0.3.0"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "pretty-quick --staged"
+    "name": "buildkite-graph",
+    "version": "1.0.0",
+    "main": "dist/index.js",
+    "license": "MIT",
+    "private": false,
+    "files": [
+        "dist"
+    ],
+    "devDependencies": {
+        "@types/graphviz": "^0.0.30",
+        "@types/jest": "^24.0.15",
+        "@types/js-yaml": "^3.12.1",
+        "husky": "^2.5.0",
+        "jest": "^24.8.0",
+        "prettier": "^1.18.2",
+        "pretty-quick": "^1.11.1",
+        "ts-jest": "^24.0.2",
+        "ts-node": "^8.3.0",
+        "typescript": "^3.5.2"
+    },
+    "scripts": {
+        "prepare": "tsc",
+        "test": "jest",
+        "test:watch": "yarn --silent test --watch"
+    },
+    "dependencies": {
+        "@types/node": "^12.0.10",
+        "@types/slug": "^0.9.1",
+        "class-transformer": "^0.2.3",
+        "graphviz": "^0.0.9",
+        "js-yaml": "^3.13.1",
+        "ow": "^0.13.2",
+        "reflect-metadata": "^0.1.13",
+        "slug": "^1.1.0",
+        "topological-sort": "^0.3.0"
+    },
+    "husky": {
+        "hooks": {
+            "pre-commit": "pretty-quick --staged"
+        }
     }
-  }
 }
