--- a/.eslintrc
+++ b/.eslintrc
@@ -11,7 +11,8 @@
     "rules": {
         "@typescript-eslint/explicit-function-return-type": [ "error", { "allowExpressions": true }],
         "@typescript-eslint/explicit-member-accessibility": "off",
-        "@typescript-eslint/no-explicit-any": "off"
+        "@typescript-eslint/no-explicit-any": "off",
+        "@typescript-eslint/no-parameter-properties": "off"
     },
     "overrides": [
         {
