--- a/package.json
+++ b/package.json
@@ -21,11 +21,13 @@
         "jest": "^24.8.0",
         "prettier": "^1.18.2",
         "pretty-quick": "^1.11.1",
+        "rimraf": "^2.6.3",
         "ts-jest": "^24.0.2",
         "ts-node": "^8.3.0",
         "typescript": "^3.5.2"
     },
     "scripts": {
+        "preprepare": "rimraf dist/",
         "prepare": "tsc",
         "pretest": "yarn lint",
         "lint": "eslint --ext .ts src",
