--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "buildkite-graph",
-    "version": "0.0.0-development",
+    "version": "0.0.1",
     "main": "dist/index.js",
     "license": "MIT",
     "private": false,
@@ -23,10 +23,10 @@
         "prettier": "^1.18.2",
         "pretty-quick": "^1.11.1",
         "rimraf": "^2.6.3",
+        "semantic-release": "^15.13.18",
         "ts-jest": "^24.0.2",
         "ts-node": "^8.3.0",
-        "typescript": "^3.5.3",
-        "semantic-release": "^15.13.18"
+        "typescript": "^3.5.3"
     },
     "scripts": {
         "preprepare": "rimraf dist/",
