--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "buildkite-graph",
-    "version": "0.0.1",
+    "version": "1.0.0-development",
     "main": "dist/index.js",
     "license": "MIT",
     "private": false,
