--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
         "@types/jest": "^24.0.15",
         "@types/js-yaml": "^3.12.1",
         "@types/node": "^12.6.8",
-        "@types/slug": "^0.9.1",
         "@typescript-eslint/eslint-plugin": "^1.12.0",
         "@typescript-eslint/parser": "^1.12.0",
         "cz-conventional-changelog": "3.0.1",
@@ -38,12 +37,12 @@
         "semantic-release": "semantic-release"
     },
     "dependencies": {
+        "@sindresorhus/slugify": "^0.9.1",
         "class-transformer": "^0.2.3",
         "graphviz": "^0.0.9",
         "js-yaml": "^3.13.1",
         "ow": "^0.13.2",
         "reflect-metadata": "^0.1.13",
-        "slug": "^1.1.0",
         "topological-sort": "^0.3.0"
     },
     "husky": {
