--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
     "name": "buildkite-graph",
     "version": "1.0.0-development",
     "main": "dist/index.js",
+    "typings": "dist/index.d.ts",
     "license": "MIT",
     "private": false,
     "files": [
