--- a/package.json
+++ b/package.json
@@ -11,23 +11,25 @@
     ],
     "devDependencies": {
         "@types/graphviz": "^0.0.30",
-        "@types/jest": "^24.0.18",
+        "@types/jest": "^24.0.23",
         "@types/js-yaml": "^3.12.1",
-        "@types/node": "^12.7.11",
-        "@typescript-eslint/eslint-plugin": "^2.3.3",
-        "@typescript-eslint/parser": "^2.3.3",
+        "@types/lodash.sortby": "^4.7.6",
+        "@types/node": "^12.12.14",
+        "@types/uniqid": "^4.1.3",
+        "@typescript-eslint/eslint-plugin": "^2.9.0",
+        "@typescript-eslint/parser": "^2.9.0",
         "cz-conventional-changelog": "3.0.2",
-        "eslint": "^6.5.1",
-        "eslint-config-prettier": "^6.4.0",
-        "husky": "^3.0.8",
+        "eslint": "^6.7.1",
+        "eslint-config-prettier": "^6.7.0",
+        "husky": "^3.1.0",
         "jest": "^24.9.0",
-        "prettier": "^1.18.2",
-        "pretty-quick": "^1.11.1",
+        "prettier": "^1.19.1",
+        "pretty-quick": "^2.0.1",
         "rimraf": "^3.0.0",
-        "semantic-release": "^15.13.24",
-        "ts-jest": "^24.1.0",
-        "ts-node": "^8.4.1",
-        "typescript": "^3.6.3"
+        "semantic-release": "^15.13.31",
+        "ts-jest": "^24.2.0",
+        "ts-node": "^8.5.4",
+        "typescript": "^3.7.2"
     },
     "scripts": {
         "preprepare": "rimraf dist/",
@@ -42,8 +44,10 @@
         "@sindresorhus/slugify": "^0.9.1",
         "graphviz": "^0.0.9",
         "js-yaml": "^3.13.1",
-        "ow": "^0.13.2",
-        "topological-sort": "^0.3.0"
+        "lodash.sortby": "^4.7.0",
+        "ow": "^0.15.0",
+        "topological-sort": "^0.3.0",
+        "uniqid": "^5.2.0"
     },
     "husky": {
         "hooks": {
