--- a/.eslintrc
+++ b/.eslintrc
@@ -5,21 +5,14 @@
         "prettier/@typescript-eslint"
     ],
     "parser": "@typescript-eslint/parser",
-    "plugins": [
-        "@typescript-eslint"
-    ],
+    "plugins": ["@typescript-eslint"],
     "rules": {
-        "@typescript-eslint/explicit-function-return-type": [ "error", { "allowExpressions": true }],
+        "@typescript-eslint/explicit-function-return-type": [
+            "error",
+            { "allowExpressions": true }
+        ],
         "@typescript-eslint/explicit-member-accessibility": "off",
         "@typescript-eslint/no-explicit-any": "off",
         "@typescript-eslint/no-parameter-properties": "off"
-    },
-    "overrides": [
-        {
-            "files": ["**/__tests__/**"],
-            "rules": {
-                "@typescript-eslint/camelcase": "off"
-            }
-        }
-    ]
+    }
 }
