--- a/package.json
+++ b/package.json
@@ -11,43 +11,45 @@
     ],
     "devDependencies": {
         "@types/graphviz": "^0.0.32",
-        "@types/jest": "^26.0.14",
-        "@types/js-yaml": "^3.12.1",
+        "@types/jest": "^26.0.23",
+        "@types/js-yaml": "^4.0.1",
         "@types/lodash.sortby": "^4.7.6",
-        "@types/node": "^14.11.8",
-        "@types/uniqid": "^5.2.0",
-        "@typescript-eslint/eslint-plugin": "^2.9.0",
-        "@typescript-eslint/parser": "^2.9.0",
+        "@types/node": "^15.12.5",
+        "@types/uniqid": "^5.3.0",
+        "@typescript-eslint/eslint-plugin": "^4.28.1",
+        "@typescript-eslint/parser": "^4.28.1",
         "cz-conventional-changelog": "3.3.0",
-        "eslint": "^7.11.0",
-        "eslint-config-prettier": "^6.7.0",
-        "husky": "^4.3.0",
-        "jest": "^26.5.3",
-        "prettier": "^2.1.2",
-        "pretty-quick": "^3.0.2",
-        "rimraf": "^3.0.0",
-        "semantic-release": "^17.2.0",
-        "ts-jest": "^26.4.1",
-        "ts-node": "^9.0.0",
-        "typescript": "^4.0.3"
+        "eslint": "^7.29.0",
+        "eslint-config-prettier": "^8.3.0",
+        "husky": "^6.0.0",
+        "jest": "^27.0.6",
+        "prettier": "^2.3.2",
+        "pretty-quick": "^3.1.1",
+        "rimraf": "^3.0.2",
+        "semantic-release": "^17.4.4",
+        "ts-jest": "^27.0.3",
+        "ts-node": "^10.0.0",
+        "typescript": "^4.3.4"
     },
     "scripts": {
+        "eslint": "eslint . --ext .js,.jsx,.ts,.tsx",
+        "prettier": "prettier --write .",
         "preprepare": "rimraf dist/",
         "prepare": "tsc",
-        "pretest": "yarn lint",
         "lint": "eslint --ext .ts src",
+        "pretest": "prettier --check . && yarn lint",
         "test": "jest --ci --coverage",
-        "test:watch": "jest --watch",
+        "test:watch": "jest --watch --notify",
         "semantic-release": "semantic-release"
     },
     "dependencies": {
         "@sindresorhus/slugify": "^1.1.0",
         "graphviz": "^0.0.9",
-        "js-yaml": "^3.13.1",
+        "js-yaml": "^4.1.0",
         "lodash.sortby": "^4.7.0",
-        "ow": "^0.18.0",
+        "ow": "^0.25.0",
         "topological-sort": "^0.3.0",
-        "uniqid": "^5.2.0"
+        "uniqid": "^5.3.0"
     },
     "husky": {
         "hooks": {
