--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/js-yaml": "^4.0.1",
     "@types/lodash.sortby": "^4.7.6",
     "@types/node": "^15.12.5",
+    "@types/seedrandom": "^3.0.1",
     "@types/uniqid": "^5.3.0",
     "@typescript-eslint/eslint-plugin": "^4.28.1",
     "@typescript-eslint/parser": "^4.28.1",
@@ -26,6 +27,7 @@
     "prettier": "^2.3.2",
     "pretty-quick": "^3.1.1",
     "rimraf": "^3.0.2",
+    "seedrandom": "^3.0.5",
     "semantic-release": "^17.4.4",
     "ts-jest": "^27.0.3",
     "ts-node": "^10.0.0",
