--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "eslint-config-prettier": "^8.3.0",
     "husky": "^6.0.0",
     "jest": "^27.0.6",
+    "node-notifier": "^10.0.0",
     "prettier": "^2.3.2",
     "pretty-quick": "^3.1.1",
     "rimraf": "^3.0.2",
@@ -31,7 +32,7 @@
     "semantic-release": "^17.4.4",
     "ts-jest": "^27.0.3",
     "ts-node": "^10.0.0",
-    "typescript": "^4.3.4"
+    "typescript": "^4.4.2"
   },
   "scripts": {
     "eslint": "eslint . --ext .js,.jsx,.ts,.tsx",
