fix package.json by adding lodash.isequal

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/graphviz": "^0.0.32",
     "@types/jest": "^26.0.23",
     "@types/js-yaml": "^4.0.1",
+    "@types/lodash.isequal": "^4.5.8",
     "@types/lodash.sortby": "^4.7.6",
     "@types/node": "^15.12.5",
     "@types/seedrandom": "^3.0.1",
@@ -49,6 +50,7 @@
     "@sindresorhus/slugify": "^1.1.0",
     "graphviz": "^0.0.9",
     "js-yaml": "^4.1.0",
+    "lodash.isequal": "^4.5.0",
     "lodash.sortby": "^4.7.0",
     "ow": "^0.25.0",
     "topological-sort": "^0.3.0",
